@@ -11,6 +11,7 @@ Jython 2.5.2a1
     - [ 1499 ] PostgreSQL datahandler should return Decimals instead of floats for NUMERIC/DECIMAL columns
     - [ 1477 ] os.setpgrp and posix.setpgrp fail with TypeError
     - [ 1396 ] Assigning os module funcs as class attributes incompatible with CPython
+    - [ 1504 ] Inheriting twice from the same Java interface causes MRO problems
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
 
